--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import { Work } from "@/components/Work";
 import { Footer } from "@/components/Footer";
 import { Summary } from "@/components/Summary";
 import { Projects } from "@/components/Projects";
+import { Freelance } from "@/components/Freelance";
 ---
 
 <Layout>
@@ -18,6 +19,7 @@ import { Projects } from "@/components/Projects";
     <Summary />
     <Work />
     <Projects />
+    <Freelance />
     <Footer />
   </div>
 </Layout>
